0.10.0 (currently working on)
- [#4465] Fix: Fix JavaScript code inspection warnings
- [#3451] Cleanup: Use TYPO3's autoloader instead of oelib's autoloader
- [#4278] Cleanup: Update the copyright to 2012
- [#4452] Cleanup: Stop using the DATABASE_QUERY_ERROR and DATABASE_RESULT_ERROR constants
- [#4352] Change: Require PHP 5.3
- [#4440] Fix: In pi2, only use forceCharset for TYPO3 < 4.7
- [#4140] Change: Require TYPO3 4.5
- [#4437] Fix: Test failures in the DefaultController tests when the test are run on a typo3.local host
- [#4429] Fix: Escape the output in more places
- [#4427] Feature: Create a comma-separated titles view helper
- [#4426] Feature: Create a time range view helper
- [#4428] Fix: Test failure in tx_seminars_EmailSalutation_testcase with latest oelib
- [#4333] Change: Use the new models in the countdown
- [#4425] Fix: EventHeadline needs to unset $this->mapper in __destruct
- [#4424] Fix: Make the seminars columns searchable in TYPO3 4.6
- [#3815] Fix: Throw more meaningful Exceptions
- [#4335] Change: Use the new models in the event headline
- [#4419] Feature: Add a view helper for rendering the date of an event
- [#4316] Fix: TCA: Fields with displayCond depend on inverted needs_registration (thanks to Philipp Kitzberger)
- [#4270] Cleanup: Add the parameter name to all @param
- [#4347] Fix: Fix missing/incorrect @return and return values
- [#4296] Fix: Fix all deprecation log warnings and version-specific unit test failures when running the unit tests on the current Core master
- [#3987] Change: Require TYPO3 4.4
- [#4326] Cleanup: Remove the Zend Studio metadata from all projects
- [#4189] Fix: Replace double quotes in subject-field of cancel/confirm-form
- [#3905] Fix: Exception in the FE editor the first time after clearing the cache
- [#4294] Fix: Adapt all version number checks for 4.6
- [#4286] Fix: pi1_eventEditor accesses a private variable isTestMode instead of calling the function
- [#4280] Cleanup: Make true, false and null uppercase